# Rubiks-Cube-scramble-drawer

./: .gitignore  CMakeLists.txt  README.md  example.c
draw_scramble/: draw_scramble.c  draw_scramble.h
move_applier/: move_applier.c  move_applier.h
scramble_generator/: scramble_generator.c  scramble_generator.h
